--- a/js/styles/App.css
+++ b/js/styles/App.css
@@ -16,6 +16,7 @@ body {
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   color: #333;
 }
