--- a/js/styles/Main.css
+++ b/js/styles/Main.css
@@ -77,7 +77,7 @@
   justify-content: space-between;
   /* align-items: center; */
   font-size: 28px;
-  font-weight: bold;
+  font-weight: 500;
   min-width: 79px;
   min-height: 80px;
 }
@@ -113,7 +113,7 @@
   max-width: 100%;
   justify-content: flex-end;
   align-items: center;
-  padding-bottom: 51px;
+  padding: 15px 0px 51px 0px;
 }
 
 .bride-name-text-container{
