--- a/js/styles/Main.css
+++ b/js/styles/Main.css
@@ -2,18 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 800px;
+  max-height: 785px;
+  min-height: 785px;
   min-width: 438px;
   max-width: 438px;
-  border: solid purple;
-  border-width: 2px;
+  border: solid royalblue;
+  border-width: 1px;
 }
 
 .main-groom-section {
   display: flex;
   flex-direction: row;
   border: solid red;
-  border-width: 2px;
+  border-width: 1px;
   min-height: 160px;
   max-height: 160px;
   min-width: 104%;
@@ -77,7 +78,8 @@
   justify-content: space-between;
   /* align-items: center; */
   font-size: 28px;
-  font-weight: 500;
+  font-family: 'BinggraeII';
+  font-weight: bold;
   min-width: 79px;
   min-height: 80px;
 }
@@ -106,14 +108,14 @@
   display: flex;
   flex-direction: row;
   border: solid green;
-  border-width: 2px;
+  border-width: 1px;
   min-height: 180px;
   max-height: 180px;
   min-width: 100%;
   max-width: 100%;
   justify-content: flex-end;
   align-items: center;
-  padding: 15px 0px 51px 0px;
+  padding: 15px 0px 53px 0px;
 }
 
 .bride-name-text-container{
@@ -175,34 +177,41 @@
 
 .grace-text {
   border: solid black;
-  border-width: 2px;
-  height: 128px;
+  border-width: 1px;
+  min-height: 128px;
+  max-height: 128px;
   width: 100%;
   text-align: center;
   font-size: 16px;
+  line-height: 2;
 }
 
 .container-divider {
-  min-height: 113px;
-  max-height: 113px;
+  min-height: 94px;
+  max-height: 94px;
   width: 100%;
   border: solid green;
-  border-width: 2px;
+  border-width: 1px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+}
+
+#divider-img {
+  padding-top: 31px;
 }
 
 .location-text-container {
   min-height: 128px;
   max-height: 128px;
   border: solid red;
-  border-width: 2px;
+  border-width: 1px;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   font-size: 16px;
+  line-height: 2;
 }
 
 #last-text {
