--- a/js/styles/Header.css
+++ b/js/styles/Header.css
@@ -6,7 +6,7 @@
   max-height: 497px;
   border: red solid;
   border-width: 1px;
-  background-image: url(../img/headerbg.png);
+  background-image: url(../assets/img/headerbg.png);
   background-size: auto;
   background-repeat: no-repeat;
   background-position: 50% 70%;
@@ -50,3 +50,51 @@
   font-size: 22px;
   margin-top: 10px;
 }
+
+@media all and (max-width: 600px) {
+  .header-container {
+    display: flex;
+    justify-content: center;
+    width: 320px;
+    min-height: 214px;
+    max-height: 214px;
+    border: red solid;
+    border-width: 1px;
+    background-image: url(../assets/img/mobilebg.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: 50% 100%;
+    /* background-attachment: fixed; */
+  }
+  
+  .header-banner-container {
+    margin-top: 341px;
+    height: 109px;
+    width: 320px;
+  }
+
+  .header-banner-content {
+    border: red solid;
+    border-width: 1px;
+    width: 100%;
+    height: 109px;
+  }
+  
+  #header-text-first{
+    font-size: 20px;
+    margin-top: 3px;
+  }
+
+  #header-text-last {
+    font-size: 22px;
+    margin-top: 5px;
+  }
+
+  #header-banner-img {
+    width: 252px;
+    height: 42px;
+    flex: display;
+    align-self: center;
+  }
+}
+
