--- a/js/styles/App.css
+++ b/js/styles/App.css
@@ -3,15 +3,21 @@
   src: url(/js/assets/fonts/BinggraeII.ttf) format('truetype');
 }
 
-/* @font-face {
+@font-face {
   font-family: 'BinggraeII-Bold';
   src: url(/js/assets/fonts/BinggraeII-Bold.ttf) format('truetype');
-} */
+}
 
 @font-face {
   font-family: 'CormorantSC-SemiBold';
   src: url(/js/assets/fonts/CormorantSC-SemiBold.ttf) format('truetype');
 }
+/*debug*/
+/* * {
+background: #000 !important;
+color: #0f0 !important;
+outline: solid #f00 1px !important;
+} */
 
 html {
   font-family: 'BinggraeII',
@@ -34,7 +40,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #333;
+  color: #4a4a4a;
 }
 
 .header-mobile-divider {
