--- a/js/styles/Main.css
+++ b/js/styles/Main.css
@@ -90,13 +90,12 @@
   /* align-items: center; */
   font-size: 28px;
   font-family: 'BinggraeII';
-  font-weight: bold;
+  /* font-weight:  */
   min-width: 80px;
   max-width: 82px;
   min-height: 80px;
   max-height: 80px;
 }
-
 
 .groom-name-text {
   display: flex;
@@ -209,6 +208,10 @@
   line-height: 2;
 }
 
+.grace-text-mobile {
+  display: none;
+}
+
 .container-divider {
   min-height: 94px;
   max-height: 94px;
@@ -237,8 +240,12 @@
   line-height: 2;
 }
 
+.location-text-container-mobile {
+  display: none;
+}
+
 #last-text {
-  margin: 0px 0px 0px 63px;
+  margin: 0px 0px 0px 71px;
 }
 
 @media all and (max-width: 600px) {
@@ -248,6 +255,8 @@
     max-width: 320px;
     min-height: 1048px;
     max-height: 1048px;
+    border: solid green;
+    border-width: 1px;
   }
   .main-groom-section {
     padding-top: 0px;
@@ -287,19 +296,44 @@
     margin-right: 36px;
   }
   .grace-text {
+    display: none;
+    min-width: 0px;
+    max-width: 0px;
+    min-height: 0px;
+    max-height: 0px;
+  }
+  .grace-text-mobile {
+    display: block;
     margin-top: 20px;
     min-width: 300px;
     max-width: 300px;
     min-height: 160px;
     max-height: 160px;
     font-size: 14px;
+    text-align: center;
+    line-height: 2.29;
   }
-  .location-text-container{
+  .location-text-container {
+    display: none;
+    min-height: 0px;
+    max-height: 0px;
+    min-width: 0px;
+    max-width: 0px;
+  }
+  .location-text-container-mobile {
+    display: block;
+    font-size: 13px;
+    line-height: 2.46;
     min-height: 192px;
     max-height: 192px;
     min-width: 242px;
     max-width: 242px;
-    font-size: 13px;
-    line-height: 2.46;
+  }
+  .mobile-padding-text {
+    padding-left: 33px;
+    margin: 0px 0px 0px 0px;
+  }
+  #last-text {
+    margin-left: 58px;
   }
 }
