--- a/js/styles/Footer.css
+++ b/js/styles/Footer.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-width: 1024px;
+  width: 100%;
   max-width: 1024px;
   min-height: 519px;
   max-height: 519px;
@@ -21,18 +21,33 @@
   min-height: 34px;
   max-height: 34px;
   background-color: #ffdfe1;
+  text-align: center;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-family: 'CormorantSC-SemiBold';
 }
+
+#made-by {
+  margin-right: 20px;
+}
+
+/* @media all and (max-width: 768px) {
+  .footer-container {
+    width: 100%;
+    max-width: 768px;
+  }
+} */
 
 @media all and (max-width: 600px) {
   .footer-container {
     padding-top: 20px;
     min-height: 264px;
     max-height: 264px;
-    min-width: 320px;
+    width: 100%;
     max-width: 320px;
   }
   .footer-text-container {
-    min-width: 100%;
-    max-width: 100%;
+    font-size: 14px;
   }
 }
