--- a/js/styles/Main.css
+++ b/js/styles/Main.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-height: 785px;
-  min-height: 785px;
+  max-height: 781px;
+  min-height: 781px;
   min-width: 438px;
   max-width: 438px;
   border: solid royalblue;
@@ -89,19 +89,18 @@
   justify-content: space-between;
   /* align-items: center; */
   font-size: 28px;
-  font-family: 'BinggraeII';
-  /* font-weight:  */
   min-width: 80px;
   max-width: 82px;
   min-height: 80px;
   max-height: 80px;
+  font-family: 'Binggrae-Bold';
 }
 
 .groom-name-text {
   display: flex;
   align-items: center;
   font-size: 28px;
-  font-weight: bold;
+  font-family: 'Binggrae-Bold';
   min-height: 80px;
   max-height: 80px;
 }
@@ -143,7 +142,7 @@
   flex-direction: row;
   align-items: center;
   font-size: 28px;
-  font-weight: bold;
+  font-family: 'Binggrae-Bold';
   min-height: 80px;
   max-height: 80px;
 }
@@ -213,8 +212,8 @@
 }
 
 .container-divider {
-  min-height: 94px;
-  max-height: 94px;
+  min-height: 90px;
+  max-height: 90px;
   width: 100%;
   border: solid green;
   border-width: 1px;
@@ -224,7 +223,7 @@
 }
 
 #divider-img {
-  padding-top: 31px;
+  padding-top: 26px;
 }
 
 .location-text-container {
@@ -304,7 +303,7 @@
   }
   .grace-text-mobile {
     display: block;
-    margin-top: 20px;
+    margin-top: 40px;
     min-width: 300px;
     max-width: 300px;
     min-height: 160px;
