--- a/js/styles/Header.css
+++ b/js/styles/Header.css
@@ -4,8 +4,6 @@
   width: 1024px;
   min-height: 497px;
   max-height: 497px;
-  border: red solid;
-  border-width: 1px;
   background-image: url(../assets/img/headerbg.png);
   background-size: auto;
   background-repeat: no-repeat;
@@ -62,12 +60,10 @@
     width: 320px;
     min-height: 214px;
     max-height: 214px;
-    border: red solid;
-    border-width: 1px;
     background-image: url(../assets/img/mobilebg.png);
-    background-size: cover;
+    background-size: inital;
     background-repeat: no-repeat;
-    background-position: 50% 120%;
+    background-position: 50% 110%;
     /* background-attachment: fixed; */
   }
   
@@ -78,8 +74,6 @@
   }
 
   .header-banner-content {
-    border: red solid;
-    border-width: 1px;
     width: 100%;
     height: 109px;
   }
