--- a/js/styles/App.css
+++ b/js/styles/App.css
@@ -51,18 +51,26 @@ body {
   color: #4a4a4a;
 }
 
-.header-mobile-divider {
+.header-divider {
   visibility: hidden;
   height: 0px;
   width: 0px;
 }
 
-@media all and (max-width: 600px) {
-  .header-mobile-divider {
-    visibility: visible;
-    min-width: 88px;
-    min-height: 3px;
-    background-image: url('http://www.theblogmarket.co/wp-content/uploads/2015/11/GOLD-11.jpg');
-    margin-top: 160px;
-  }
+.mobile-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #4a4a4a;
+}
+
+.header-mobile-divider {
+  visibility: visible;
+  min-width: 88px;
+  min-height: 3px;
+  background-image: url(/js/assets/img/gold11.jpg);
+  margin-top: 160px;
 }
