--- a/js/styles/GoogleMap.css
+++ b/js/styles/GoogleMap.css
@@ -6,10 +6,11 @@
   padding-top: 24px;
 }
 
-@media all and (max-width: 600px) {
-  .google-map {
-    padding-top: 20px;
-    height: 218px;
-    width: 300px;
-  }
+
+.mobile-google-map {
+  display: flex;
+  align-self: center;
+  padding-top: 20px;
+  height: 218px;
+  width: 300px;
 }
