--- a/js/styles/Header.css
+++ b/js/styles/Header.css
@@ -1,11 +1,11 @@
 .header-container {
   display: flex;
   justify-content: center;
-  width: 1024px;
+  width: 100%;
   min-height: 497px;
   max-height: 497px;
   background-image: url(../assets/img/headerbg.png);
-  background-size: auto;
+  background-size: initial;
   background-repeat: no-repeat;
   background-position: 50% 70%;
   /* background-attachment: fixed; */
@@ -18,7 +18,7 @@
   margin-top: 25px;
   height: 222px;
   width: 438PX;
-  background-image: url('http://www.theblogmarket.co/wp-content/uploads/2015/11/GOLD-11.jpg');
+  background-image: url(/js/assets/img/gold11.jpg);
 }
 
 .header-banner-content {
@@ -53,46 +53,58 @@
   margin-top: 10px;
 }
 
-@media all and (max-width: 600px) {
-  .header-container {
-    display: flex;
-    justify-content: center;
-    width: 320px;
-    min-height: 214px;
-    max-height: 214px;
-    background-image: url(../assets/img/mobilebg.png);
-    background-size: inital;
-    background-repeat: no-repeat;
-    background-position: 50% 110%;
-    /* background-attachment: fixed; */
-  }
-  
-  .header-banner-container {
-    margin-top: 341px;
-    height: 109px;
-    width: 320px;
-  }
+.mobile-header-container {
+  display: flex;
+  justify-content: center;
+  width: 320px;
+  min-height: 216px;
+  max-height: 216px;
+  background-image: url(../assets/img/mobilebg.png);
+  background-size: inital;
+  background-repeat: no-repeat;
+  background-position: 50% 110%;
+  /* background-attachment: fixed; */
+}
 
-  .header-banner-content {
-    width: 100%;
-    height: 109px;
-  }
-  
-  #header-text-first{
-    font-size: 20px;
-    margin-top: 3px;
-  }
+.mobile-header-banner-container {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  background-image: url(/js/assets/img/gold11.jpg);
+  margin-top: 341px;
+  height: 109px;
+  width: 320px;
+}
 
-  #header-text-last {
-    font-size: 22px;
-    margin-top: 5px;
-  }
+.mobile-header-banner-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-self: center;
+  text-align: center;
+  width: 100%;
+  height: 109px;
+  background-color: #ffffff;
+  font-family: 'CormorantSC-SemiBold';
+  font-weight: 600;
+  font-size: 22px;
+}
 
-  #header-banner-img {
-    width: 252px;
-    height: 42px;
-    flex: display;
-    align-self: center;
-  }
+#mobile-header-text-first{
+  font-size: 20px;
+  margin-top: 3px;
+  margin-bottom: 12px;
+}
+
+#mobile-header-text-last {
+  font-size: 22px;
+  margin-top: 5px;
+}
+
+#mobile-header-banner-img {
+  width: 252px;
+  height: 42px;
+  flex: display;
+  align-self: center;
 }
 
